--- a/index.html
+++ b/index.html
@@ -27,9 +27,9 @@
         <a href="#price" title="View Price Plan" class="nav-item">Price Plan</a>
         <a href="#amenities" title="Explore Amenities" class="nav-item">Amenities</a>
         <a href="#floorplan" title="View Floor Plans" class="nav-item">Floor Plan</a>
+        <a href="#virtual" title="Take Virtual Site Tour" class="nav-item">Virtual Site Tour</a>
         <a href="#gallery" title="Browse Gallery" class="nav-item">Gallery</a>
         <a href="#location" title="Check Project Location" class="nav-item">Location</a>
-        <a href="#virtualsite" title="Take Virtual Site Tour" class="nav-item">Virtual Site Tour</a>
         <a href="" class="popup-trigger downloadBrochure" data-heading="Download Brochure!" title="Download Project Brochure PDF"><img src="assests/images/icons/downloadIcon.gif" alt="Download Brochure" width="25" height="25" loading="lazy"><span>Brochure</span></a>
     </span>
 
@@ -99,7 +99,7 @@
         <i class="ri-map-pin-line"></i>
         At Financial District, Hyderabad
       </p>
-      <p class="bannerSubHeading">Luxurious 4 BHK Apartments & Sky Villas Starts <span class="bannersubheadingprice">₹ 9</span> Cr* Onwards</p>
+      <p class="bannerSubHeading">Luxurious 4 BHK Apartments & Sky Villas Starts <span class="banner-subheading-price"><span class="bannersubheadingprice">₹ 9</span> Cr* Onwards</span></p>
       <div class="bannerOfferConatiner">
         <p class="bannerofferHeading">Launch Offers Available</p>
         <ul class="offerlist">
@@ -126,7 +126,7 @@
                 <p class="overviewPara clampText">Candeur Skyline by Candeur Constructions brings unmatched luxury to the Financial District, Hyderabad. Spread across 4.04 acres, Candeur Skyline offers exclusive 4 BHK apartments and sky villas across 4 impressive towers, each soaring 58 storeys high with just 282 residences. At Candeur Skyline, residents experience refined living with world-class amenities, including a 60,000 sq. ft. clubhouse, Badminton Courts, Cricket Nets, a Barbeque Zone, Leisure Park, Hoops Court, Jogging Trail, Outdoor Fitness Station, Tot Lot, and a Herb Garden. More than just luxury, Candeur Skyline creates a vibrant community where neighbours connect and friendships flourish. With regular events, group activities, and recreational spaces, Candeur Skyline fosters a lifestyle of togetherness and belonging. Discover the perfect blend of privacy, community, and modern living at Candeur Skyline, where every day feels like a new experience. Choose Candeur Skyline, where life truly elevates.
 
                 </p>
-                <a href="#" class="readMoreBtn" title="Read full project overview">Read More ▶</a>
+                <a href="#" class="readMoreBtn" title="Read full project overview">Read More <i class='ri-arrow-right-s-fill readmoreicon'></i></a>
             </div>
             <div class="projecthighlightcontainer">
                 <div class="highlightContainer">
@@ -169,7 +169,7 @@
                         <button class="priceBtn btn-animated popup-trigger" data-heading="Get Pricing Details!" type="button" aria-label="Download price sheet for 4 BHK 446 Sq. Ft."><i class="ri-article-fill"></i> Get Price Sheet</button>
                     </div>
 
-                    <!-- <div class="priceCard" role="group" aria-label="1 BHK apartment details">
+                    <!--<div class="priceCard" role="group" aria-label="1 BHK apartment details">
                         <p class="priceSize">1 BHK</p>
                         <hr class="price-divider">
                         <p class="priceSize">446 Sq. Ft.</p>
@@ -338,7 +338,26 @@
 
 </section>
 
-<iframe width="560" height="315" src="https://www.youtube.com/embed/9NG9YG_lbj4?si=enycYCF0uDet2TgA" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen style="width: 100%;" loading="lazy"></iframe>
+<!--Virtual Tour-->
+<section class="virtual" id="virtual">
+        <div class="virtualsite-container">
+            <h3 class="sectionHeading">Virtual Site Tour</h3>
+            <div class="virtual-video-container popup-trigger" data-heading="Request Virtual Site Tour!">
+                <img src="assests/images/banner/b1.webp" alt="Video of Lodha" width="100%" height="300px" loading="lazy">
+                <p class="virtual-subheading">Sample Flat Video</p>
+                <div class="video-content-container">
+                    <p class="video-content-greeting">Welcome to</p>
+                    <p class="video-content">Candeur Skyline Hyderabad</p>
+                </div>
+                <div class="video-overlay"></div>
+                <div class="youtube-playicon"></div>
+                
+                <p class="Video-heading"><img src="assests/images/logo/logo.webp" alt="logo" class="videoLogo">Candeur Skyline</p>
+                <p class="virtual-footer">Watch on <i class="ri-youtube-fill"></i>Youtube</p>
+                
+            </div>
+        </div>
+    </section>
 
 
 <!-- Gallery -->
@@ -561,7 +580,7 @@
     <p class="clampText">
       Candeur Constructions, one of India's top property developers, prioritises meeting customer needs and delivering high-quality projects within budget and on schedule. The company has completed two residential projects - Candeur Carlisle in Mahadevpura and Candeur Rise in Varthur, East Bangalore. It plans to launch additional projects that contribute to the development of residential and mixed-use real estate in Bangalore. Candeur Constructions maintains quality objectives and has established quality assurance systems to monitor progress. Additionally, every project by Candeur Constructions upholds the highest standards of quality and excellence, making the builder a popular choice among buyers.
     </p>
-    <a href="#" class="readMoreBtn" title="Read full project overview">Read More ▶</a>
+    <a href="#" class="readMoreBtn" title="Read full project overview">Read More <i class="ri-arrow-right-s-fill readmoreicon"></i></a>
     </div>
   </div>
 
@@ -650,7 +669,7 @@
         </div>
         <div class="popupform-inputcontainer" style="text-align: center;">
             <input type="submit" value="Submit" class="popupform-Submitbtn">
-            <p>OR</p>
+            <p style="margin: 0.5rem 0;">OR</p>
             <button class="popupform-whatsapp"><img src="assests/images/icons/whatsappIcon.gif" alt="Connect on WhatsApp" width="30" height="30" loading="lazy"><span>WhatsApp</span></button>
         </div>
       </form>
